# iroh-ts

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  README.md  USAGE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.toml
.github/workflows/: pages.yml  publish.yml
__test__/: index.spec.ts
crate/: Cargo.toml
crate/src/: addr.rs  blobs.rs  docs.rs  endpoint.rs  lib.rs
docs/: index.html  style.css
examples/chat/: index.html  package.json  test.html  vite.config.ts  wrangler.toml
examples/chat/src/: main.ts
examples/debug/: index.html  package.json  server.ts  tsconfig.json  wrangler.toml
examples/debug/src/: debug-logger.ts  main.ts  protocol.ts
examples/echo-server/: README.md  package.json  server.ts  tsconfig.json
examples/echo-server/client/: index.html  main.ts  package.json
examples/p2p-chat/: README.md  index.html  package.json  vite.config.ts
examples/p2p-chat/src/: main.ts
examples/poker/: index.html  package.json  test.html  wrangler.toml
examples/poker/src/: game.ts  main.ts  protocol.ts
openspec/changes/add-communication-examples/: proposal.md  tasks.md
openspec/changes/docs-and-examples/: tasks.md
openspec/changes/fix-poker-betting-turns/: proposal.md  tasks.md
openspec/changes/github-pages-docs/: design.md  proposal.md
openspec/changes/iroh-ts-bindings/: design.md  proposal.md  tasks.md
openspec/specs/chat-example/: spec.md
openspec/specs/connections/: spec.md
openspec/specs/docs-site/: spec.md
openspec/specs/gh-pages-deploy/: spec.md
ts/: browser.ts  index.ts  node.ts
(+17 files in other folders)
