[package]
name = "iroh-ts"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iroh = { version = "0.97", default-features = false }
iroh-blobs = { version = "0.99", default-features = false }
iroh-docs = { version = "0.97", default-features = false }
iroh-gossip = { version = "0.97", default-features = false, features = ["net"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
